[gd_scene load_steps=2 format=3 uid="uid://b5j8lal3mnp4q"]

[ext_resource type="Script" path="res://scripts/ui/game_clear_ui.gd" id="1_game_clear"]

[node name="GameClearUI" type="CanvasLayer"]
layer = 100
visible = false
script = ExtResource("1_game_clear")

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="GameClearLabel" type="Label" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 80
text = "클리어!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "최종 점수: 0"
horizontal_alignment = 1

[node name="FinalWaveLabel" type="Label" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "클리어한 웨이브: 5"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MainMenuButton" type="Button" parent="Container/CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "메인 메뉴로"
